# mle-training

./: .gitignore  MLproject  README.md  env.yml  setup.cfg  setup.py
deploy/conda/: conda-lean.yaml  linux_cpu_py39.yml
deploy/docker/: .dockerignore  Dockerfile  Dockerfile.multistage  Dockerfile.nonrootuser  Dockerfile.rootuser  housing_value-0.0.0-py3-none-any.whl  requirements.txt  run.sh  setup.cfg
deploy/docker/mlruns/: MLmodel
docs/source/: conf.py  housing_value.rst  index.rst
mlruns/0/49d83a98ec424dba9ccb10f44305d352/: meta.yaml
mlruns/0/49d83a98ec424dba9ccb10f44305d352/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/0/5be903af3df047b59cdf6247143f9b4f/: meta.yaml
mlruns/0/5be903af3df047b59cdf6247143f9b4f/metrics/: rmse
mlruns/0/6bf505d3fbd94dc580f3e14cb89db621/: meta.yaml
mlruns/0/6cbd785ed7d048c0a4b6fa6e5c8096c2/: meta.yaml
nonstandardcode/: README.md  nonstandardcode.py
notebooks/exercise/: chapter.html  exercise1&2.ipynb  pipelines.html  source.ipynb
notebooks/personal/: ingest_data.ipynb  score.ipynb  train.ipynb
notebooks/reference/: housing_value.rst  setup.py  sklearn_utils.py
notebooks/reference/mlflow/: README.md
reference/extract/: MLproject  README.md  app.py
reference/extract/deploy/conda/: linux_cpu_py39.yml
reference/mlflow/: tagging.py
reference/nonstandardcode/: README.md  nonstandardcode.py
reference/packaging/: README.md  setup.cfg
src/housing_value/: __init__.py  ingest_data.py  score.py  train.py  utility.py
tests/functional/: test_workflow.py
tests/unit/: test_ingest_data.py
(+21 files in other folders)
