[metadata]
name = housing_value
version = 0.0.0
author = satyam-ta
author_email = satyam.purwar@tigeranalytics.com
description = housing value package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/satyam-ta/mle-training
project_urls =
    Bug Tracker = https://github.com/satyam-ta/mle-training/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E501

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py

[Default]
raw_data_url = https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz
log_level = DEBUG
log_data = logs/main.log
raw_data = data/raw
processed_data = data/processed
pickle_data = artifacts
imputer_file = imputer.pkl
model_file = model.pkl
pipe_file = pipe.pkl
output_data = data/processed
output_file = output.csv

[Data]
rooms_ix = 3
bedrooms_ix = 4
population_ix = 5
households_ix = 6